# midway-bddtool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bddview.c  bddview.cpp  build.bat  build.ps1
.github/workflows/: ci.yml  release.yml
imgui/: imgui_widgets.cpp
platform/: app_version.h  bdd_format.h  bddtool_cli.cpp  bddview.rc  bg_editor.cpp  bg_editor.h  bg_editor_globals.h  undo_manager.cpp  undo_manager.h
platform/Core/: app_diagnostics.cpp  app_diagnostics.h  app_version.h  app_version_resource.h.in  autosave.cpp  bdd_core.cpp  bdd_core.h  bdd_metadata.cpp  bdd_metadata.h  bdd_metadata_editor.cpp  command_utils.cpp  editor_app_globals.h  editor_bridge.cpp  editor_commands.cpp  editor_commands.h  editor_project_globals.cpp  editor_project_globals.h  editor_project_storage.cpp  editor_project_storage.h  image_lookup.cpp  image_lookup.h  image_processing.cpp  image_processing.h  img_format.cpp  img_format.h  import_export.cpp  import_export.h  mk2_analysis.cpp  mk2_analysis.h  mk2_assembly_export.cpp  mk2_shared_paths.cpp  mk2_shared_paths.h  path_utils.cpp  path_utils.h  project_header.cpp  project_header.h  project_snapshot.cpp  project_snapshot.h  recent_files.cpp  recent_files.h  (+24 more)
platform/Core/utils/: bdd_core.cpp  bdd_metadata.cpp  command_utils.cpp  img_format.cpp  path_utils.cpp
platform/UI/: alignment_doctor_overlay.cpp  app_icon.cpp  app_icon.h  autosave.h  background_picker.cpp  block_editor.cpp  canvas_scrollbars.cpp  checkpoints_panel.cpp  editor_events.cpp  editor_lifecycle.cpp  editor_render.cpp  game_view_controls.cpp  game_view_overlay.cpp  gc_panel.cpp  grid_settings.cpp  grid_settings.h  image_asset_helpers.cpp  image_draw_helpers.cpp  image_draw_helpers.h  image_index_editor.cpp  info_dialogs.cpp  layers_panel.cpp  menu_bar.cpp  mk2_asset_tools.cpp  mk2_authoring_tools.cpp  mk2_auto_repair_suggestions.cpp  mk2_camera_bookmarks.cpp  mk2_duplicate_mirror_finder.cpp  mk2_image_cleanup_tools.cpp  mk2_import_workspace_tools.cpp  mk2_layer_presets.cpp  mk2_layer_stack_inspector.cpp  mk2_load2_doctor_tool.cpp  mk2_one_click_validation_run.cpp  mk2_palette_animation_tools.cpp  mk2_palette_sync_prompt.cpp  mk2_palette_sync_prompt.h  mk2_palette_usage_optimizer.cpp  mk2_pan_coverage_scanner.cpp  mk2_project_seed_tools.cpp  (+72 more)
platform/UI/actions/: clipboard.cpp  export_viewport.cpp  export_viewport.h  object_actions.cpp  object_position_undo.cpp  object_position_undo.h  selection_helpers.cpp  selection_helpers.h  stage_command_clipboard.cpp
platform/UI/app/: PanelManager.cpp  PanelManager.h  autosave.cpp  editor_command_processor.cpp  editor_events.cpp  editor_lifecycle.cpp  editor_lifecycle.h  editor_render.cpp  save_project.cpp  settings.cpp  stage_open.cpp
platform/UI/assets/: app_icon.cpp  app_icon.h  image_asset_helpers.cpp  image_draw_helpers.cpp  preview_image_file.cpp  preview_image_file.h  texture_cache.cpp  texture_cache.h
platform/UI/dialogs/: background_picker.cpp  background_picker.h  grid_settings.cpp  image_index_editor.cpp  image_index_editor.h  img_import_picker.cpp  info_dialogs.cpp  info_dialogs.h  native_file_dialogs.cpp  new_project_dialog.cpp  preferences_panel.cpp  preferences_panel.h  quit_dialog.cpp  reference_settings.cpp  save_error_popup.cpp
platform/UI/overlays/: game_view_overlay.cpp  module_bounds_overlay.cpp  sdl_alignment_guides.cpp  sdl_reference_overlay.cpp  sdl_reference_overlay.h  sdl_view_hud.cpp  sdl_view_hud.h  sdl_world_grid_overlay.cpp  sdl_world_grid_overlay.h  sdl_world_markers.cpp  world_context_overlay.cpp  world_game_rect_overlay.cpp
platform/UI/panels/: DocumentTabsPanel.h  MenuBarPanel.h  RightRailPanels.h  StatsPanels.h  ToolbarPanel.h  ToolboxPanel.h  UtilityPanels.h  block_editor.cpp  checkpoints_panel.cpp  debug_info_panel.cpp  document_tabs.cpp  empty_canvas_hint.cpp  gc_panel.cpp  group_bpp_reducer_panel.cpp  image_list.cpp  layers_panel.cpp  menu_bar.cpp  minimap.cpp  modules_panel.cpp  object_list.cpp  palette_editor.cpp  properties_panel.cpp  right_rail_panels.cpp  split_object_dialog.cpp  sprite_resize_dialog.cpp  stats_panels.cpp  tile_preview.cpp  toolbar.cpp  workspace_panels.cpp
platform/UI/sdl/: sdl_bitmap_font.cpp  sdl_bitmap_font.h  sdl_context.h  sdl_drop_file.cpp  sdl_drop_file.h  sdl_image_grid_view.cpp  sdl_image_grid_view.h  sdl_keyboard_actions.cpp  sdl_mouse_interaction.cpp  sdl_mouse_interaction.h  sdl_mouse_wheel.cpp  sdl_mouse_wheel.h  sdl_object_drag_autopan.cpp  sdl_object_picker.cpp  sdl_object_picker.h  sdl_path_input.cpp  sdl_path_input.h  sdl_save_popup.cpp  sdl_selection_rect.cpp  sdl_stage_open.cpp  sdl_stage_open.h  sdl_tga_file_dialog.cpp  sdl_tooltip.cpp  sdl_tooltip.h  sdl_world_objects.cpp  sdl_world_objects.h
platform/UI/tools/: mk2_budget_relief_suggestions.cpp  mk2_budget_relief_suggestions.h  mk2_danger_palette_designer.cpp  mk2_integration_summary.cpp  mk2_layer_presets.cpp  mk2_level_start_helper_tool.cpp  mk2_load2_doctor_tool.cpp  mk2_lod_stale_warning.cpp  mk2_mirrored_asset_tool.cpp  mk2_palette_animation_tools.cpp  mk2_palette_sync_prompt.cpp  mk2_preview_diff_tool.cpp  mk2_rom_space_reclaim.cpp  mk2_runtime_actor_tool.cpp  mk2_runtime_actor_tool.h  mk2_runtime_extras_backend.cpp  mk2_runtime_extras_overlay.cpp  mk2_runtime_extras_tool.cpp  mk2_runtime_lod_import.cpp  mk2_safe_dedup_assistant.cpp  mk2_smart_palette_grouper.cpp  mk2_stage_config.cpp  mk2_stage_fx_builder_tool.cpp  mk2_stage_readiness_gate.cpp  mk2_stage_recipe_manifest.cpp  mk2_stage_repair_mode.cpp  mk2_stage_start_camera_tool.cpp  mk2_stage_wiring_check.cpp  mk2_template_wizard_tool.cpp  mk2_wedge_risk_tool.cpp  mk2_workflow.cpp  mk2_workspace_import.cpp  palette_blend_merge_tool.cpp
platform/UI/view/: canvas_scrollbars.cpp  canvas_scrollbars.h  game_view_controls.cpp  game_view_controls.h  navigation.cpp  navigation.h  onboarding_hints.cpp  right_panel_layout.cpp  right_panel_layout.h  stage_overview.cpp  status_bar.cpp  welcome_screen.cpp  (+5 more)
platform/libs/: stb_image.h  stb_impl.cpp
reference/: README.txt
reference/stages/: README.txt
tools/: roundtrip_smoke.py
(+2 files in other folders)
